tests/ui/specialization/coherence/default-item-normalization-ambig-1.stderr
warning: the feature `specialization` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/default-item-normalization-ambig-1.rs:2:12
   |
LL | #![feature(specialization)]
   |            ^^^^^^^^^^^^^^
   |
   = note: see issue #31844 <https://github.com/rust-lang/rust/issues/31844> for more information
   = help: consider using `min_specialization` instead, which is more stable and complete
   = note: `#[warn(incomplete_features)]` on by default

error[E0119]: conflicting implementations of trait `Y` for type `<() as X>::U`
  --> $DIR/default-item-normalization-ambig-1.rs:20:1
   |
LL | impl Y for <() as X>::U {}
   | ----------------------- first implementation here
LL | impl Y for <i32 as X>::U {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `<() as X>::U`

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0119`.
